comment extra code

--- a/paert.html
+++ b/paert.html
@@ -25,11 +25,11 @@
                 </div>
                 
                 <div class="hidden md:flex items-center space-x-6">
-                    <a href="#" onclick="showPage('home')" class="nav-link text-gray-700 hover:text-blue-600">Home</a>
+                    <!-- <a href="#" onclick="showPage('home')" class="nav-link text-gray-700 hover:text-blue-600">Home</a>
                     <a href="#" onclick="showPage('products')" class="nav-link text-gray-700 hover:text-blue-600">Products</a>
-                    <a href="#" onclick="showPage('categories')" class="nav-link text-gray-700 hover:text-blue-600">Categories</a>
+                    <a href="#" onclick="showPage('categories')" class="nav-link text-gray-700 hover:text-blue-600">Categories</a> -->
                     <a href="#" onclick="showPage('about')" class="nav-link text-gray-700 hover:text-blue-600">About</a>
-                    <a href="#" onclick="showPage('contact')" class="nav-link text-gray-700 hover:text-blue-600">Contact</a>
+                    <!-- <a href="#" onclick="showPage('contact')" class="nav-link text-gray-700 hover:text-blue-600">Contact</a> -->
                 </div>
 
                 <div class="flex items-center space-x-4">
